--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libp2p = { version = "0.39.1", default-features = false, features = ["identify", "floodsub", "tcp-async-io", ]}
+libp2p = { version = "0.39.1", default-features = false, features = [
+    "identify",
+    "floodsub",
+    "tcp-async-io",
+    "noise",
+    "mplex",
+    "mdns", ]}
+async-std = { version = "1.9.0" }
