--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -14,3 +14,4 @@ libp2p = { version = "0.39.1", default-features = false, features = [
     "mplex",
     "mdns", ]}
 async-std = { version = "1.9.0" }
+futures = { version = "0.3.16" }
