--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,5 +63,5 @@ jobs:
           rustup update stable
           rustup default stable
       - name: Check clippy
-        run: cargo clippy -- -D warnings
+        run: cargo clippy --all -- -D warnings
       
