--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -13,5 +13,8 @@ libp2p = { version = "0.39.1", default-features = false, features = [
     "noise",
     "mplex",
     "mdns", ]}
-async-std = { version = "1.9.0" }
+async-std = { version = "1.9.0", features = [ "attributes" ] }
 futures = { version = "0.3.0" }
+
+[dev-dependencies]
+tokio = { version = "1.10.0", features = [ "full", ]}
