--- a/iba-core/Cargo.toml
+++ b/iba-core/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
+parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
+sha2 = { default-features = false, version = "0.9.6" }
