--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 members = [
     "network",
     "chat",
-    "iba-core",
 ]
 
 [dependencies]
+parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
+sha2 = { default-features = false, version = "0.9.6" }
