--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ members = [
 [dependencies]
 parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
 sha2 = { default-features = false, version = "0.9.6" }
+
+[dev-dependencies]
+hex = { version = "0.4.3" }
