Add Blockchain, finalizing daemon logic (#15)

--- a/bin/dummyd/Cargo.toml
+++ b/bin/dummyd/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "blockchain"
+name = "dummyd"
 version = "0.1.0"
 edition = "2018"
 
@@ -8,6 +8,4 @@ edition = "2018"
 [dependencies]
 parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
 sha2 = { default-features = false, version = "0.9.6" }
-
-[dev-dependencies]
 hex = { version = "0.4.3" }
