--- a/bin/dummyd/Cargo.toml
+++ b/bin/dummyd/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
 sha2 = { default-features = false, version = "0.9.6" }
 hex = { version = "0.4.3" }
+
+## library
+iba-lib = { version = "0.1.0", path = "../.." }
