--- a/core/script/Cargo.toml
+++ b/core/script/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dummyd"
+name = "script"
 version = "0.1.0"
 edition = "2018"
 
@@ -7,8 +7,3 @@ edition = "2018"
 
 [dependencies]
 parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
-sha2 = { default-features = false, version = "0.9.6" }
-hex = { version = "0.4.3" }
-
-## library
-transaction = { version = "0.1.0", path = "../../core/transaction" }
