--- a/core/transaction/Cargo.toml
+++ b/core/transaction/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dummyd"
+name = "transaction"
 version = "0.1.0"
 edition = "2018"
 
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
 sha2 = { default-features = false, version = "0.9.6" }
-hex = { version = "0.4.3" }
+script = { version = "0.1.0", path = "../script" }
 
-## library
-transaction = { version = "0.1.0", path = "../../core/transaction" }
+[dev-dependencies]
+hex = { version = "0.4.3" }
