--- a/core/script/Cargo.toml
+++ b/core/script/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+interpreter = { version = "0.1.0", path = "../interpreter" }
 parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
