Add interpreter crate (#20)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 members = [
     "core/script",
+    "core/interpreter",
+    "core/interpreter-test",
     "core/transaction",
     "network",
     "bin/dummyd",
