--- a/core/interpreter-test/Cargo.toml
+++ b/core/interpreter-test/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 [dependencies]
 interpreter = { version = "0.1.0", path = "../interpreter" }
 script = { version = "0.1.0", path = "../script" }
+parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
