update transaction execution, add OppEcho

--- a/bin/dummyd/Cargo.toml
+++ b/bin/dummyd/Cargo.toml
@@ -11,4 +11,6 @@ sha2 = { default-features = false, version = "0.9.6" }
 hex = { version = "0.4.3" }
 
 ## library
-transaction = { version = "0.1.0", path = "../../core/transaction" }
+transaction = { path = "../../core/transaction" }
+script = { path = "../../core/script" }
+interpreter = { path = "../../core/interpreter" }
