--- a/core/interpreter-test/Cargo.toml
+++ b/core/interpreter-test/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-interpreter = { version = "0.1.0", path = "../interpreter" }
-script = { version = "0.1.0", path = "../script" }
+interpreter = { path = "../interpreter" }
+script = { path = "../script" }
 parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
