move network crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ members = [
     "core/interpreter",
     "core/interpreter-test",
     "core/transaction",
-    "network",
+    "core/network",
     "bin/mockchain",
 ]
