--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
     "core/interpreter-test",
     "core/transaction",
     "core/network",
+    "core/mempool",
     "bin/mockchain",
 ]
